--- a/src/main/resources/templates/views/hospital/hospital.html
+++ b/src/main/resources/templates/views/hospital/hospital.html
@@ -69,7 +69,7 @@
                 <div class="row mb-3">
                     <div class="col d-flex justify-content-end">
                         <a class="btn btn-outline-secondary light-gray-btn"
-                           th:href="@{/writeHospital(redirectUrl=${redirectUrl})}">
+                           th:href="@{/writeHospital}">
                             병원 추가
                         </a>
                     </div>
